GNOME Bugzilla – Bug 665905
PATCH: fix including rsvg.h always causing a deprecation warning
Last modified: 2011-12-10 20:06:29 UTC
Created attachment 203181 [details] [review] PATCH: fix including rsvg.h always causing a deprecation warning Before this patch rsvg.h marks the RsvgSizeFunc *type* as deprecated, and then uses it to declare other deprecated functions, causing gcc to always emit a depecrated warning as soon as rsvg.h is included. This breaks compilation of apps which compile with -Werror.